# BarBar

./: LICENCE  README.md  TODO.md  bar.js  barbar.5.scd  barbar.desktop  barbar.gresource.xml  config.scm  config.ui  dbus.js  dwl.blp  hyprland.blp  meson.build  meson_options.txt  mine.blp  minimal.js  prefs.blp  river.blp  style.css  sway.blp
docs/: barbar.toml.in  design.md  glib.md  meson.build
examples/: bar.js  bar.lua  bar.py  bar.ts  debug.blp  dwl-ipc.blp  hyprland.blp  linking.sh  niri.blp  river.blp  style.css  sway.blp  widgets.blp
examples/conky/: README.md  conky.blp
protocol/: game-mode.xml  meson.build  systemd1.xml
src/: barbar-background.c  barbar-background.h  barbar-backlight.c  barbar-backlight.h  barbar-bar.c  barbar-bar.h  barbar-battery.c  barbar-battery.h  barbar-calendar.c  barbar-calendar.h  barbar-clock.c  barbar-clock.h  barbar-cmd.c  barbar-cmd.h  barbar-cpu.c  barbar-cpu.h  barbar-disk.c  barbar-disk.h  barbar-enum.c  barbar-enum.h  barbar-error.c  barbar-error.h  barbar-github-activity.c  barbar-github-activity.h  barbar-inhibitor.c  barbar-inhibitor.h  barbar-layered-window.h  barbar-mem.c  barbar-mem.h  barbar-mpd.c  barbar-mpd.h  barbar-mpris2.c  barbar-mpris2.h  barbar-network.c  barbar-network.h  barbar-output-head.c  barbar-output-head.h  barbar-output-manager.c  barbar-output-manager.h  barbar-river.c  (+18 more)
src/dwl/: barbar-dwl-layout.c  barbar-dwl-service.c  barbar-dwl-service.h  barbar-dwl-status.c  barbar-dwl-status.h  barbar-dwl-tags.c  barbar-dwl-tags.h  barbar-dwl-title.c  barbar-dwl-title.h
src/dwl/ipc/: barbar-dwl-layout-ipc.c  barbar-dwl-layout-ipc.h  barbar-dwl-tags-ipc.c  barbar-dwl-tags-ipc.h  barbar-dwl-title-ipc.c  barbar-dwl-title-ipc.h
src/dwl/no-ipc/: barbar-dwl-layout.c  barbar-dwl-layout.h  barbar-dwl-service.c  barbar-dwl-service.h  barbar-dwl-tags.c  barbar-dwl-tags.h  barbar-dwl-title.c  barbar-dwl-title.h
src/hyprland/: barbar-hyprland-ipc.c  barbar-hyprland-ipc.h  barbar-hyprland-service.c  barbar-hyprland-service.h  barbar-hyprland-submap.c  barbar-hyprland-submap.h  barbar-hyprland-window.c  barbar-hyprland-window.h  barbar-hyprland-workspace.c  barbar-hyprland-workspace.h
src/niri/: barbar-niri-ipc.c  barbar-niri-ipc.h  barbar-niri-language.c  barbar-niri-language.h  barbar-niri-subscribe.c  barbar-niri-subscribe.h  barbar-niri-window.c  barbar-niri-window.h  barbar-niri-workspace.c  barbar-niri-workspace.h
src/river/: barbar-river-layout.c  barbar-river-layout.h  barbar-river-mode.c  barbar-river-mode.h  barbar-river-tags.c  barbar-river-tags.h  barbar-river-view.c  barbar-river-view.h
src/sensors/: barbar-backlight.c  barbar-backlight.h  barbar-battery.c  barbar-battery.h  barbar-bluetooth.c  barbar-bluetooth.h  barbar-clock.c  barbar-clock.h  barbar-cmd.c  barbar-cmd.h  barbar-collector.c  barbar-collector.h  barbar-cpu.c  barbar-cpu.h  barbar-disk.c  barbar-disk.h  barbar-filesystem.c  barbar-filesystem.h  barbar-gamemode.c  barbar-gamemode.h  barbar-inhibitor.c  barbar-inhibitor.h  barbar-interval-sensor.c  barbar-interval-sensor.h  barbar-keyboard.c  barbar-keyboard.h  barbar-location.c  barbar-location.h  barbar-mem.c  barbar-mem.h  barbar-mpris.c  barbar-mpris.h  barbar-mpris2.c  barbar-mpris2.h  barbar-network.c  barbar-network.h  barbar-pomodoro.c  barbar-pomodoro.h  barbar-power-profiles.c  barbar-power-profiles.h  (+18 more)
src/sensors/mpris/: barbar-mpris-constants.h  barbar-mpris-player.c  barbar-mpris-player.h  barbar-mpris.c  barbar-mpris.h
src/sway/: barbar-sway-ipc.c  barbar-sway-ipc.h  barbar-sway-language.c  barbar-sway-language.h  barbar-sway-mode.c  barbar-sway-mode.h  barbar-sway-scratchpad.c  barbar-sway-scratchpad.h  barbar-sway-subscribe.c  barbar-sway-subscribe.h  barbar-sway-window.c  barbar-sway-window.h  barbar-sway-workspace.c  barbar-sway-workspace.h
src/tray/: barbar-dbusmenu.c  barbar-dbusmenu.h  barbar-tray-item.c  barbar-tray-item.h  barbar-tray.c  barbar-tray.h  barbar-watcher.c  barbar-watcher.h
src/ui/: gtkmediacontrols.ui
src/widgets/: barbar-activity-graph.c  barbar-activity-graph.h  barbar-bar-graph.c  barbar-bar-graph.h  barbar-box.c  barbar-box.h  barbar-cava.c  barbar-cava.h  barbar-contribution-graph.h  barbar-diagram.c  barbar-diagram.h  barbar-eventswitcher.c  barbar-eventswitcher.h  barbar-github-activity.c  barbar-github-activity.h  barbar-graph.c  barbar-graph.h  barbar-interval-graph.c  barbar-interval-graph.h  barbar-label.c  barbar-label.h  barbar-level-bar.c  barbar-level-bar.h  barbar-line-graph.c  barbar-line-graph.h  barbar-mediacontrols.h  barbar-mpriscontrol.c  barbar-mpriscontrol.h  barbar-playbutton.c  barbar-playbutton.h  barbar-processes.c  barbar-processes.h  barbar-reveallabel.c  barbar-reveallabel.h  barbar-rotary.c  barbar-rotary.h  barbar-sensorwidget.c  barbar-sensorwidget.h  barbar-separator.c  barbar-seperator.c  (+7 more)
subprojects/: cava.wrap  statusnotifier-systray-gtk4.wrap
