option('gtk_doc', type : 'boolean', value : false)
# option('gtk_doc-html', type : 'boolean', value : true)
# option('gtk_doc-pdf', type : 'boolean', value : false)

option('mpd', type: 'feature', value: 'auto', description: 'Enable support for the Music Player Daemon')
option('mpris', type: 'feature', value: 'auto', description: 'Enable support for mpris')
option('logind', type: 'feature', value: 'auto', description: 'Enable support for logind')
option('dbusmenu-gtk', type: 'feature', value: 'auto', description: 'Enable support for tray')
option('upower_glib', type: 'feature', value: 'auto', description: 'Enable support for upower')
option('libgtop', type : 'boolean', value: true, description: 'Enable top support')
option('wireplumber', type : 'boolean', value: true, description: 'Enable top support')
option('introspection', type : 'boolean', value : true)
option('vala', type : 'boolean', value : true)
option('mpris', type: 'feature', value: 'auto', description: 'Enable support for mpris')
