option('gtk_doc', type : 'boolean', value : false)
option('mpris', type: 'feature', value: 'auto', description: 'Enable support for mpris')
option('logind', type: 'feature', value: 'auto', description: 'Enable support for logind')
option('upower_glib', type: 'feature', value: 'auto', description: 'Enable support for upower')
option('wireplumber', type: 'boolean', value: true, description: 'Enable top support')
option('systray', type: 'boolean', value: true, 
  description: 'If we should link the binary against statusnotifier-systray-gtk4')
option('introspection', type : 'boolean', value : true)
option('vala', type : 'boolean', value : true)
option('docs', type : 'boolean', value : false, description: 'Build documentation')
option('man-page', type : 'boolean', value : true, description: 'Build man-page')
option('dwl-method', type : 'combo', choices : ['no-ipc', 'ipc', 'both'],
  value : 'both', description: 'How we should communicate with dwl')
